--- a/Css/sobreMi.css
+++ b/Css/sobreMi.css
@@ -1,101 +1,44 @@
-/* Estilos generales */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f4f8;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9;
     color: #333;
-    line-height: 1.6;
-    padding: 40px;
 }
-
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #4CAF50;
+    background-color: midnightblue;
     color: white;
-    padding: 20px;
-    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
 }
-
-h1 {
-    font-size: 2.5rem;
-}
-
 section {
-    max-width: 1000px;
-    margin: 30px auto;
-    background-color: #ffffff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
-
-h2 {
-    font-size: 1.8rem;
-    color: #333;
-    margin-bottom: 15px;
+h1, h2 {
+    color: dodgerblue;
 }
-
-h3 {
-    font-size: 1.6rem;
-    color: #2c3e50;
-}
-
 p {
-    color: #555;
     font-size: 1.1rem;
-    line-height: 1.6;
-    margin-bottom: 20px;
 }
-
 ul {
     list-style-type: square;
     margin-left: 20px;
-    color: #444;
 }
 
-ul li {
+.hobby button {
+    background-color: red;
+    color: white;
     font-size: 1.1rem;
-    margin-bottom: 8px;
-}
-
-/* Sección de foto de perfil y presentación */
-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-.fotoDePerfil {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-right: 20px;
-    border: 4px solid #fff;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.2s;
 }
 
-.info h1 {
-    font-size: 2.5rem;
-    color: #333;
-    margin-bottom: 10px;
-}
 
-.Estudios {
-    color: #777;
-    font-size: 1.2rem;
-}
-
-/* Estilo de los botones */
-.volver a {
-    text-decoration: none; /* Evitar subrayado en el enlace */
-}
 
 .volver button {
     background-color: #0056b3;
@@ -109,7 +52,3 @@ header {
     transition: background-color 0.3s, transform 0.2s;
 }
 
-.volver button:hover {
-    background-color: #004a8b;
-    transform: translateY(-3px);
-}
